se agrego animaciones, transformaciones y gradientes

--- a/galeria.html
+++ b/galeria.html
@@ -22,18 +22,18 @@
     </nav>
     <div class="galeria">
     <!--aca faltarian muchas mas imagenes-->
-    <img class="imagen_galeria" src="imagenes/choroni17.jpg" alt="choroni">
-    <img class="imagen_galeria" src="imagenes/maleconchoroni.jpg" alt="maleconchoroni">
-    <img class="imagen_galeria" src="imagenes/panoramica-de-playa-grande.jpg" alt="panoramica-de-playa-grande">
-    <img class="imagen_galeria" src="imagenes/panoramica-de-playa-grande1.jpg" alt="panoramica-de-playa-grande1">
-    <img class="imagen_galeria" src="imagenes/Playa grande4.jpg" alt="playagrande">
-    <img class="imagen_galeria" src="imagenes/tuja.jpg" alt="tuja">
-    <img class="imagen_galeria" src="imagenes/buceo1.jpg" alt="buceo">
-    <img class="imagen_galeria" src="imagenes/Playagrande.jpg" alt="playa_grande">
-    <img class="imagen_galeria" src="imagenes/caminatachoroni.jpg" alt="caminatachoroni">
-    <img class="imagen_galeria" src="imagenes/choroni-1270x724_c.jpg" alt="choroni">
-    <img class="imagen_galeria" src="imagenes/playagrande2.jfif" alt="playagrande2">
-    <img class="imagen_galeria" src="imagenes/choroni.jpg" alt="choroni">
+    <img class="imagen_galeria zoom" src="imagenes/choroni17.jpg" alt="choroni">
+    <img class="imagen_galeria zoom" src="imagenes/maleconchoroni.jpg" alt="maleconchoroni">
+    <img class="imagen_galeria zoom" src="imagenes/panoramica-de-playa-grande.jpg" alt="panoramica-de-playa-grande">
+    <img class="imagen_galeria zoom" src="imagenes/panoramica-de-playa-grande1.jpg" alt="panoramica-de-playa-grande1">
+    <img class="imagen_galeria zoom" src="imagenes/Playa grande4.jpg" alt="playagrande">
+    <img class="imagen_galeria zoom" src="imagenes/tuja.jpg" alt="tuja">
+    <img class="imagen_galeria zoom" src="imagenes/buceo1.jpg" alt="buceo">
+    <img class="imagen_galeria zoom" src="imagenes/Playagrande.jpg" alt="playa_grande">
+    <img class="imagen_galeria zoom" src="imagenes/caminatachoroni.jpg" alt="caminatachoroni">
+    <img class="imagen_galeria zoom" src="imagenes/choroni-1270x724_c.jpg" alt="choroni">
+    <img class="imagen_galeria zoom" src="imagenes/playagrande2.jfif" alt="playagrande2">
+    <img class="imagen_galeria zoom" src="imagenes/choroni.jpg" alt="choroni">
     </div>
     <br>
     <nav class="navegador">
@@ -49,7 +49,7 @@
 
     <footer>
         <p>2022 ChoroniTurismo derechos reservados</p>
-        <ul>
+        <ul class="footer">
             <li><a href="facebook.com">Facebook</a></li>
             <li><a href="twitter.com">Twitter</a></li>
             <li><a href="whatsapp.com">Whatsapp</a></li>
