--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     <div>
         <!--aca irian imagenes carrousel-->
-        <img class="imagen" src="imagenes/choroni.jpg" alt="tabladesurf">
+        <img class="imagen zoom" src="imagenes/choroni.jpg" alt="tabladesurf">
         <p>Nos dedicamos a brindarte experiencias en el hermoso Caribe de Choroni y sus alrededores!
             Paseos en lancha a todas las playas, caminatas por las frondosas montañas tropicales del parque nacional
             Henry Pittier con avistamientos de aves, plantas, animales y cascadas impresionantes, actividades deportivas
