--- a/nosotros.html
+++ b/nosotros.html
@@ -31,7 +31,7 @@
     </div>
     <footer>
         <p>2022 ChoroniTurismo derechos reservados</p>
-        <ul>
+        <ul class="footer">
             <li><a href="facebook.com">Facebook</a></li>
             <li><a href="twitter.com">Twitter</a></li>
             <li><a href="whatsapp.com">Whatsapp</a></li>
