--- a/paquetes.html
+++ b/paquetes.html
@@ -11,6 +11,7 @@
 <body>
     <h1>ChoroniTurismo</h1>
     <h2>Comienza tu aventura!!</h2>
+
     <nav class="navegador">
         <ul>
             <li class="menu_principal"><a href="index.html">Inicio</a></li>
@@ -29,10 +30,10 @@
     </nav>
     <!--aca faltan listas con los diferentes paquetes y sus sub-listas-->
     <div>
-        <img class="imagen_paquetes" src="imagenes/choroni.jpg" alt="choroni">
-        <img class="imagen_paquetes" src="imagenes/buceo1.jpg" alt="buceo1">
-        <img class="imagen_paquetes" src="imagenes/Playagrande.jpg" alt="playagrande">
-        <img class="imagen_paquetes" src="imagenes/caminatachoroni.jpg" alt="caminatachoroni">
+        <img class="imagen_paquetes zoom" src="imagenes/choroni.jpg" alt="choroni">
+        <img class="imagen_paquetes zoom" src="imagenes/buceo1.jpg" alt="buceo1">
+        <img class="imagen_paquetes zoom" src="imagenes/Playagrande.jpg" alt="playagrande">
+        <img class="imagen_paquetes zoom" src="imagenes/caminatachoroni.jpg" alt="caminatachoroni">
     </div>
     <br>
     <br>
@@ -41,7 +42,7 @@
 
     <footer>
         <p>2022 ChoroniTurismo derechos reservados</p>
-        <ul>
+        <ul class="footer">
             <li><a href="facebook.com">Facebook</a></li>
             <li><a href="twitter.com">Twitter</a></li>
             <li><a href="whatsapp.com">Whatsapp</a></li>
