--- a/galeria.html
+++ b/galeria.html
@@ -5,21 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChoroniTurismo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos_proyecto.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-    <h1>ChoroniTurismo</h1>
-    <h2>Comienza tu aventura!!</h2>
-    <nav class="navegador">
-        <ul>
-            <li class="menu_principal"><a href="index.html">Inicio</a></li>
-            <li class="menu_principal"><a href="paquetes.html">Paquetes</a></li>
-            <li class="menu_principal"><a href="galeria.html">Galeria</a></li>
-            <li class="menu_principal"><a href="nosotros.html">Nosotros</a></li>
-            <li class="menu_principal"><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
+    <header>
+        <h1>ChoroniTurismo</h1>
+        <h2>Comienza tu aventura!!</h2>
+    </header>
+    <div class="container-fluid">
+        <div class="nav d-flex justify-content-between m-5">
+            <div class="nav-item">
+                <div>
+                    <a href="index.html">Inicio</a>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <a href="paquetes.html">Paquetes</a>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <a href="galeria.html">Galeria</a>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <a href="nosotros.html">Nosotros</a>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <a href="contacto.html">Contacto</a>
+                </div>
+            </div>
+        </div>
+        
+    </div> 
     <div class="galeria">
     <!--aca faltarian muchas mas imagenes-->
     <img class="imagen_galeria zoom" src="imagenes/choroni17.jpg" alt="choroni">
@@ -35,26 +60,53 @@
     <img class="imagen_galeria zoom" src="imagenes/playagrande2.jfif" alt="playagrande2">
     <img class="imagen_galeria zoom" src="imagenes/choroni.jpg" alt="choroni">
     </div>
-    <br>
-    <nav class="navegador">
-        <ul>
-            <li class="menu_principal"><a href="index.html">Inicio</a></li>
-            <li class="menu_principal"><a href="paquetes.html">Paquetes</a></li>
-            <li class="menu_principal"><a href="galeria.html">Galeria</a></li>
-            <li class="menu_principal"><a href="nosotros.html">Nosotros</a></li>
-            <li class="menu_principal"><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-    <br>
+    <div class="container-fluid">
+        <div class="nav d-flex justify-content-between m-5">
+            <div class="nav-item">
+                <div>
+                    <a href="index.html">Inicio</a>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <a href="paquetes.html">Paquetes</a>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <a href="galeria.html">Galeria</a>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <a href="nosotros.html">Nosotros</a>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <a href="contacto.html">Contacto</a>
+                </div>
+            </div>
+        </div>
+        
+    </div>
 
-    <footer>
+    <footer class="container-fluid">
         <p>2022 ChoroniTurismo derechos reservados</p>
-        <ul class="footer">
-            <li><a href="facebook.com">Facebook</a></li>
-            <li><a href="twitter.com">Twitter</a></li>
-            <li><a href="whatsapp.com">Whatsapp</a></li>
-            <li><a href="instagram.com">Instagram</a></li>
-        </ul>
+        <div class="nav d-flex justify-content-between m-5">
+            <div class="nav-item">
+                <a href="facebook.com">Facebook</a>
+            </div>
+            <div class="nav-item">
+                <a href="twitter.com">Twitter</a>
+            </div>
+            <div class="nav-item">
+                <a href="whatsapp.com">Whatsapp</a>
+            </div>
+            <div class="nav-item">
+                <a href="instagram.com">Instagram</a>
+            </div>
+        </div>
 
     </footer>
 </body>
