--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChoroniTurismo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos_proyecto.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<header>
-    <h1>ChoroniTurismo</h1>
-    <h2>Comienza tu aventura!!</h2>
-</header>
+
 <body>
-    
+    <header>
+        <h1>ChoroniTurismo</h1>
+        <h2>Comienza tu aventura!!</h2>
+    </header>
     <div class="container-fluid">
         <div class="nav d-flex justify-content-between m-5">
             <div class="nav-item">
@@ -48,9 +49,27 @@
     </div> 
     <div>
         <!--aca irian imagenes carrousel-->
-        <div class="container">
-            <img class="d-flex justify-content-center" src="imagenes/choroni.jpg" alt="tabladesurf">
-        </div>
+        <div id="carouselExampleControls" class="carousel slide"  data-bs-ride="carousel">
+            <div class="carousel-inner imagen-carrusel" >
+              <div class="carousel-item active">
+                <img src="imagenes/choroni17.jpg" class="d-block" alt="choroni17">
+              </div>
+              <div class="carousel-item">
+                <img src="imagenes/choroni-1270x724_c.jpg" class="d-block" alt="choroni">
+              </div>
+              <div class="carousel-item">
+                <img src="imagenes/buceo1.jpg" class="d-block" alt="buceo1">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         
         <p>Nos dedicamos a brindarte experiencias en el hermoso Caribe de Choroni y sus alrededores!
             Paseos en lancha a todas las playas, caminatas por las frondosas montañas tropicales del parque nacional
@@ -58,7 +77,6 @@
             como surf, buceo, pesca y mucho mas!!
         </p>
     </div>
-    <br>
 
     <footer class="container-fluid">
         <p>2022 ChoroniTurismo derechos reservados</p>
